--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,89 @@
-p {
-  background-color: red;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 100px 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+header {
+  grid-area: 1 / 1 / 2 / 3;
+}
+
+.user,
+.bot {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 0.3fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.user {
+  grid-area: 2 / 1 / 3 / 2;
+
+  border-right: black solid 2.5px;
+}
+
+.userShips,
+.botShips {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 5%;
+
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+.botBoard,
+.userBoard {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.board {
+  width: 500px; /*  20 * 30 */
+  height: 500px;
+  background-color: azure;
+}
+
+.bot {
+  grid-area: 2 / 2 / 3 / 3;
+
+  border-left: black solid 2.5px;
+}
+
+header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  font-size: 3rem;
+  border-bottom: black solid 1px;
+}
+
+header .score {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  width: 300px;
+  left: 50%;
+  margin-left: -150px; /* negative half of width*/
+  flex-direction: row;
+}
+
+header .score p {
+  width: 50px;
+  text-align: center;
 }
