--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,8 @@ header {
   justify-content: center;
   align-items: flex-start;
   padding-top: 5%;
+  flex-wrap: wrap;
+  
 
   grid-area: 2 / 1 / 3 / 2;
 }
@@ -105,5 +107,5 @@ header .winner p {
 }
 
 .boardBlock:hover {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgb(230, 94, 94) !important;
 }
