--- a/src/style.css
+++ b/src/style.css
@@ -6,16 +6,17 @@
 
 :root {
   --boardSize: 20;
-  --playBtnFont: 'Unbounded', cursive;
+  --playBtnFont: "Unbounded", cursive;
   --titleScreenBackground: RGB(135, 206, 235);
   --titleFontColor: black;
   --headerHeight: 10vh;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@300&display=swap");
 
 body {
   height: 100%;
+  overflow: hidden;
 }
 
 #titleScreen {
@@ -38,12 +39,17 @@ body {
 }
 
 #titleScreen #playBtn {
-  background: rgb(0,0,144);
-  background: linear-gradient(0deg, rgba(0,0,144,1) 8%, rgba(6,69,237,0.96) 48%, rgba(7,123,150,1) 100%);
+  background: rgb(0, 0, 144);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 144, 1) 8%,
+    rgba(6, 69, 237, 0.96) 48%,
+    rgba(7, 123, 150, 1) 100%
+  );
   border: none;
 }
 
-#titleScreen #playBtn p{
+#titleScreen #playBtn p {
   font-size: 150px;
   color: RGB(135, 206, 235);
   font-family: var(--playBtnFont);
@@ -52,6 +58,81 @@ body {
 #titleScreen #playBtn p:hover {
   opacity: 0.9;
   cursor: pointer;
+}
+
+#cover {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+
+#options {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  z-index: 2;
+  width: 600px;
+  height: 300px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white; 
+
+  background-color: #1f2937;
+}
+
+#exitOptionsBtn {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+#options .form {
+  display: flex;
+  flex-direction: column;
+
+  width: 80%;
+  font-size: 24px;
+}
+
+#options .form-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+#options label {
+  flex: 1;
+}
+
+#options .slider-value {
+  width: 30px;
+  text-align: center;
+}
+
+#options input[type="range"] {
+  flex: 1;
+  margin-left: 1rem;
+}
+
+#options input[type="checkbox"] {
+  margin-left: auto;
+  width: 30px;
+  height: 30px;
+}
+
+#options button[type="submit"] {
+  align-self: center;
+  margin-top: 1rem;
+  width: 35%;
+  font-size: 36px;
 }
 
 #game {
@@ -87,7 +168,6 @@ body {
   align-items: flex-start;
   padding-top: 5%;
   flex-wrap: wrap;
-  
 
   grid-area: 2 / 1 / 3 / 2;
 }
@@ -142,7 +222,9 @@ header .buttons {
   display: flex;
 }
 
-#exitBtn, #optionsBtn {
+#exitGameBtn,
+#optionsBtn,
+#exitOptionsBtn {
   width: 75px;
   height: var(--headerHeight);
 
@@ -173,7 +255,6 @@ header .winner p {
   border: 2.5px rgb(206, 181, 38) dotted;
 }
 
-
 .boardBlock {
   border: black solid 0.1px;
 }
@@ -203,5 +284,5 @@ header .winner p {
 
 .missedBlock {
   background-color: black;
-  border: solid black 1px;
+  border: solid grey 1px;
 }
