Visual changes on figure ships

--- a/src/style.css
+++ b/src/style.css
@@ -175,7 +175,7 @@ body {
   align-items: flex-start;
   padding-top: 5%;
   flex-wrap: wrap;
-
+  
   grid-area: 2 / 1 / 3 / 2;
 }
 
@@ -276,13 +276,15 @@ header .winner p {
   height: 25px;
   background-color: #78716c;
   text-align: center;
-  margin: 0 5px;
+  margin: 0 15px;
+  padding: 0;
   border: black solid 1px;
 }
 
 .shipBlock {
   background-color: red;
   border: solid black 1px;
+  opacity: 1 !important;
 }
 
 .sunkenBlock {
